# C-Glass

./: README.md  meson.build
c/: meson.build
c/apps/: meson.build
c/apps/compiler/: meson.build
c/apps/compiler/data/: builtins.txt  main.txt  make_literal.py  runtime.txt
c/apps/compiler/inc/compiler/: compiler.h
c/apps/compiler/src/: compiler.c  main.c
c/apps/interpreter/: meson.build
c/apps/interpreter/inc/interpreter/: glass-instance.h  glass-value.h  interpreter.h
c/apps/interpreter/src/: glass-instance.c  glass-value.c  interpreter.c  main.c
c/apps/minifier/: meson.build
c/apps/minifier/inc/minifier/: minification.h
c/apps/minifier/src/: main.c  minification.c
c/libs/: meson.build
c/libs/glasstypes/: meson.build
c/libs/glasstypes/inc/glasstypes/: glass-builders.h  glass-class.h  glass-command.h  glass-function.h
c/libs/glasstypes/src/: builtins.c  glass-class.c  glass-command.c  glass-function.c  glass-program.c
c/libs/parser/: meson.build
c/libs/parser/inc/parser/: parser.h
c/libs/parser/src/: parser.c
c/libs/parser/test/: meson.build  parser-test.c
c/libs/test/inc/test/: test.h
c/libs/test/src/: test.c
c/libs/utils/: meson.build
c/libs/utils/inc/utils/: copy-interface.h  hash-interface.h  list.h  map.h  set.h  stream.h  string.h
c/libs/utils/src/: copy-interface.c  list.c  map.c  set.c  stream.c  string.c
c/libs/utils/test/: list-test.c  map-test.c  meson.build  string-test.c
glass/: meson.build
glass/examples/: 99.glass  bf.glass  echo.glass  fib.glass  fizzbuzz.glass  primes.glass
glass/libs/: bool.glass  list.glass  map.glass  math.glass  meson.build  null.glass  output.glass  string.glass
glass/tests/: builtin-math.glass  builtin-math.out  builtin-str.glass  builtin-str.out  list-test.glass  list-test.out  map-test.glass  map-test.out  meson.build  string-test.glass  string-test.out  test-interpreter.py
libs/: meson.build
libs/test/: meson.build
libs/test/src/: test.c
libs/utils/: meson.build
libs/utils/inc/utils/: string.h
libs/utils/src/: string.c
libs/utils/test/: meson.build  string-test.c
